// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<tooltip> demo: > render [basic] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Mouse over to display tooltip
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Mouse over to display tooltip
    </button>
    <!---->
  </div>
</div>
`;

exports[`<tooltip> demo: > render [color] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->#3491FA
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->#165DFF
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->#722ED1
    </button>
    <!---->
  </div>
</div>
`;

exports[`<tooltip> demo: > render [mini] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Mouse over to display tooltip
</button>
`;

exports[`<tooltip> demo: > render [position] correctly 1`] = `
<div data-v-2a822414="" style="position: relative; width: 440px; height: 280px;"><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 0px; left: 70px;">
    <!--v-if-->TL
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 0px; left: 180px;">
    <!--v-if-->TOP
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 0px; left: 290px;">
    <!--v-if-->TR
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 240px; left: 70px;">
    <!--v-if-->BL
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 240px; left: 180px;">
    <!--v-if-->BOTTOM
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 240px; left: 290px;">
    <!--v-if-->BR
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 60px; left: 10px;">
    <!--v-if-->LT
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 120px; left: 10px;">
    <!--v-if-->LEFT
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 180px; left: 10px;">
    <!--v-if-->LB
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 60px; left: 350px;">
    <!--v-if-->RT
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 120px; left: 350px;">
    <!--v-if-->RIGHT
  </button>
  <!----><button data-v-2a822414="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal button" type="button" style="position: absolute; top: 180px; left: 350px;">
    <!--v-if-->RB
  </button>
  <!---->
</div>
`;
